# AkaiChat

./: AkaiChat.pro  AkaiChatServer.pro  CMakeLists.txt  README.md  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatserver.cpp  chatserver.h  main.cpp
